UPDATES: Add new field attributes IsEmailAddress, IsURL & IsURLColumn Fix pagination alignment Moved many attributes to props instead of passing them as attributes as part of tableComponent object Add editable date field Fix Select All bug Fix pagination alignment issue Update mock data with new fields Update example

--- a/example/src/SegiTable/SegiTable.module.css
+++ b/example/src/SegiTable/SegiTable.module.css
@@ -209,6 +209,8 @@
      display: flex;
      justify-content: flex-end;
      padding: 10px;
+     align-items: center;
+     justify-content: center;
 }
 
 .SegiTablePaginationIconButton {
@@ -235,6 +237,8 @@
      display: flex;
      align-items: center;
      gap: 10px;
+     position: relative;
+     top: 2px;
 }
 
 .SegiTablePaginationSpan {
@@ -249,7 +253,7 @@
      min-width: fit-content;
      margin-left: 15px;
      position: relative;
-     top: 12px;
+     top: 11px;
 }
 
 .SegiTableRecordStartEndAll {
@@ -262,9 +266,9 @@
      font-size: 1.3rem;
      line-height: 1.43;
      width: 125px;
-     padding-top: 12px;
+     padding-top: 11px;
      margin-left: 25px;
-     position: relative;
+     vertical-align: middle;
 }
 
 .SegiTableRowLabel {
